# RAG-cold-email

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: github_scraper.ipynb  mvp.ipynb  nb.ipynb
src/generation/: email_generator.py
src/ingestion/: github_loader.py  jobs_loader.py  resume_loader.py
src/rag/: chunking.py  retrieval.py
src/utils/: mailer.py  model.py
