[project]
name = "cold-email"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "keyring>=25.7.0",
    "langchain-community>=0.4.1",
    "langchain[groq]>=1.1.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pygithub>=2.8.1",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
    "yagmail>=0.15.293",
]
